# MacOS-Swap-Killer

./: .gitignore  README.md  README.zh-CN.md  TODO.md  plan.md  pyproject.toml
src/macos_swap_killer/: __init__.py  actuator.py  cli.py  config.py  launchd.py  llm.py  logging_utils.py  models.py  monitor.py  notifications.py  playbooks.py  policy.py  privacy.py  processes.py  reporting.py  rules.py  swap.py  trends.py  ui.py
tests/: test_actuator.py  test_launchd.py  test_llm.py  test_monitor.py  test_notifications.py  test_playbooks.py  test_policy.py  test_privacy.py  test_reporting.py  test_rules.py  test_swap.py  test_trends.py  test_ui.py
